refactor(user): convert DTOs to records, inject mapper as component, implement UserDetails and add email validation