@@ -2,44 +2,69 @@ package com.eduardo.ecommerce.service;
 
 import com.eduardo.ecommerce.dto.UserCreateDTO;
 import com.eduardo.ecommerce.dto.UserResponseDTO;
+import com.eduardo.ecommerce.dto.UserUpdateDTO;
+import com.eduardo.ecommerce.exception.BusinessException;
 import com.eduardo.ecommerce.exception.ResourceNotFoundException;
 import com.eduardo.ecommerce.mapper.UserMapper;
 import com.eduardo.ecommerce.model.User;
 import com.eduardo.ecommerce.repository.UserRepository;
+import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class UserService {
-    private final UserRepository repository;
 
-    public UserService(UserRepository repository) { this.repository = repository; }
+    private final UserRepository repository;
+    private final PasswordEncoder passwordEncoder;
+    private final UserMapper mapper;
+
+    public UserService(UserRepository repository,
+                       PasswordEncoder passwordEncoder,
+                       UserMapper mapper) {
+        this.repository = repository;
+        this.passwordEncoder = passwordEncoder;
+        this.mapper = mapper;
+    }
 
     public UserResponseDTO create(UserCreateDTO dto) {
-        User user = UserMapper.toEntity(dto);
-        User saved = repository.save(user);
-        return UserMapper.toResponseDTO(saved);
+        if (repository.existsByEmail(dto.email())) {
+            throw new BusinessException("Email já cadastrado");
+        }
+
+        User user = mapper.toEntity(dto);
+        user.setPassword(passwordEncoder.encode(dto.password()));
+
+        return mapper.toResponseDTO(repository.save(user));
     }
 
     public List<UserResponseDTO> findAll() {
         return repository.findAll()
                 .stream()
-                .map(UserMapper::toResponseDTO)
-                .collect(Collectors.toList());
+                .map(mapper::toResponseDTO)
+                .toList();
     }
 
     public UserResponseDTO findById(Long id) {
         User user = repository.findById(id)
                 .orElseThrow(() -> new ResourceNotFoundException("Usuário não encontrado"));
-        return UserMapper.toResponseDTO(user);
+        return mapper.toResponseDTO(user);
     }
 
     public void delete(Long id) {
         User user = repository.findById(id)
                 .orElseThrow(() -> new ResourceNotFoundException("Usuário não encontrado"));
-
         repository.delete(user);
+    }
+
+    public UserResponseDTO update(Long id, UserUpdateDTO dto) {
+        User user = repository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Usuário não encontrado"));
+
+        user.setName(dto.name());
+        user.setPassword(passwordEncoder.encode(dto.password()));
+
+        return mapper.toResponseDTO(repository.save(user));
     }
 }
